--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "horse-app",
   "version": "0.0.1",
   "description": "[WIP] App information and images as a service",
   "main": "index.js",
@@ -13,7 +14,6 @@
     "express": "^4.13.3",
     "request": "^2.61.0"
   },
-  "name": "horse-app",
   "devDependencies": {
     "istanbul": "^0.3.19",
     "tape": "^4.2.0"
@@ -24,6 +24,8 @@
   },
   "keywords": [
     "app",
+    "logo",
+    "screenshots",
     "horse",
     "express",
     "middleware",
