--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "express": "^4.13.3",
+    "mkdirp": "^0.5.1",
     "request": "^2.61.0"
   },
   "devDependencies": {
